# windy

./: README.md
atmosphere/: CMakeLists.txt  PressureUpdate.h  PressureUpdate.ufl  TentativeVelocity.h  TentativeVelocity.ufl  VelocityUpdate.h  VelocityUpdate.ufl  lshape.xml  main.cpp
atmosphere/3Dmodel/: Atmosphere.stl  a.out  atmodel  atmodel.cpp
atmosphere/3Dmodel/OldVersions/: sphere.0002.ipt
atmosphere/prod/: density000000.vtu  pressure000197.vtu  velocity000197.vtu
macro/: AtmosphereModel.cpp  AtmosphereModel.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp  CMakeLists.txt  Constants.hpp  Domains.cpp  Domains.hpp  MagneticFieldModel.cpp  MagneticFieldModel.hpp  PressureUpdate.ufl  TentativeVelocity.h  VelocityUpdate.h  VelocityUpdate.ufl  atmosphere.h  concentration.ufl  magnetic.h  main.cpp  velocity.h
macro/ufl/: PressureUpdate.h  PressureUpdate.ufl  TentativeVelocity.h  TentativeVelocity.ufl  VelocityUpdate.h  VelocityUpdate.ufl  concentration.h  concentration.ufl  velocity.h  velocity.ufl
magnetic/: CMakeLists.txt  magnetic.h  magnetic.ufl  main.cpp  velocity.h  velocity.ufl
